@@ -1,3 +1,15 @@
+2012-02-07  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Dashboard on perf-o-matic should be sorted
+        https://bugs.webkit.org/show_bug.cgi?id=77924
+
+        Reviewed by Tony Chang.
+
+        Sort tests in the frontend using the fact ES5 keeps the property order in the insertion order.
+
+        * Websites/webkit-perf.appspot.com/js/config.js:
+        (fetchDashboardManifest):
+
 2012-02-07  Frederik Gladhorn  <frederik.gladhorn@nokia.com>
 
         Update .gitignore for Qt Creator/KDevelop.
